[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/formations/FormationUfo.gd" type="Script" id=1]
[ext_resource path="res://scenes/enemies/ufo/Ufo.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/enemies/jaeger/Jaeger.tscn" type="PackedScene" id=3]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )
underling = ExtResource( 3 )

[node name="Ufo" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, -0.25, -3.60161 )

[node name="RespawnTimer" type="Timer" parent="."]

[connection signal="has_recovered" from="Ufo" to="." method="_on_Ufo_has_recovered"]
[connection signal="was_defeated" from="Ufo" to="." method="_on_Ufo_was_defeated"]
